# yugiquery

./: .devcontainer.json  .gitattributes  .gitignore  .readthedocs.yaml  Bandai.html  Cards.html  Cards.ipynb  Errata.ipynb  LICENSE.md  MANIFEST.in  README.md  Rush.html  Sets.html  Sets.ipynb  Speed.html  _config.yml  cards_1655764123.523218.csv  cards_1655771285.397462.csv  index.md  pyproject.toml  requirements.txt  setup.py  yugiquery.ipynb
.devcontainer/: devcontainer.json
.github/workflows/: install.yml  pylint.yml
Assets/: README.md  _secrets.env  _secrets.txt  dates.csv  gateway.html  header.md  index.md  requirements.txt  secrets.txt
Data/: All_cards_1655939235.csv  All_cards_1655941853.csv  All_cards_1656709442.csv  All_cards_1656713350.csv  All_cards_1661643448.csv  All_cards_1662714251.csv  All_cards_1662807874.csv  All_cards_1662934346.csv  All_cards_1662971722.csv  All_cards_1662982934.csv  All_cards_1664380399.csv  All_cards_1664383395.csv  All_cards_1664490192.csv  All_cards_1664528363.csv  All_cards_1665353607.csv  All_cards_1666546034.csv  All_cards_1666695259.csv  All_cards_1667828075.csv  All_cards_1667832343.csv  All_cards_1667929944.csv  All_cards_1667941097.csv  All_cards_1669568383.csv  All_cards_1670094014.csv  All_cards_1670109405.csv  All_cards_1670359554.csv  All_cards_1670537685.csv  All_cards_1670584620.csv  All_cards_1670590949.csv  All_cards_1670793910.csv  All_cards_1670884972.csv  All_cards_1671020048.csv  All_cards_1671140661.csv  All_cards_1671302838.csv  All_cards_1671393916.csv  All_cards_1673889238.csv  All_cards_1673890265.csv  All_cards_1673907272.csv  All_cards_1673966041.csv  All_cards_1674074114.csv  All_cards_20230110.csv  (+27 more)
Source/: Cards.ipynb  Errata.ipynb  Install.sh  Sets.ipynb  Timeline.ipynb  Yugiquery.py  discord_bot.py  discord_listener.py  install.sh  requirements.txt  yugiquery.py
assets/: README.md  Template.ipynb  _secrets.env  benchmark.json  colors.json  dates.json  gateway.html  header.md  index.md  rarities.json  secrets.env
assets/json/: api.json  colors.json  dates.json  headers.json  rarities.json  regions.json
assets/markdown/: README.md  index.md
assets/nbconvert/: dynamic.css
assets/nbconvert/lab/: conf.json  index.html.j2
assets/nbconvert/lab/static/: theme-auto.css
assets/nbconvert/labdynamic/: conf.json  index.html.j2
assets/nbconvert/labdynamic/static/: dynamic.css
assets/notebook/: Collection.ipynb  Template.ipynb
assets/scripts/: generate_auto_theme.py  git_filters.bat  git_filters.sh  post_install.py  unlock_git.bat  unlock_git.sh
assets/templates/: Collection.ipynb  Decks.ipynb  Template.ipynb  collection.xlsx
data/: Cards_changelog_20230118.csv  all_bandai_2023-02-19T18:16.csv  all_bandai_2023-02-20T23:44.csv  all_bandai_2023-02-21T16:05.csv  all_bandai_2023-03-27T04:01.csv  all_bandai_2023-03-27T23:25.csv  all_bandai_2023-04-24T04:01.csv  all_bandai_2023-05-01T00:40.csv  all_bandai_2023-05-01T22:22.csv  all_bandai_2023-05-08T04:02.csv  all_bandai_2023-05-23T12:16.csv  all_bandai_2023-07-12T14:56.csv  all_bandai_2023-07-12T20:32.bz2  all_bandai_2023-09-06T20:34Z.bz2  all_bandai_2023-10-30T05:02.bz2  all_cards_1674162053.csv  all_cards_1674232149.csv  all_cards_1674321400.csv  all_cards_1674415097.csv  all_cards_1674518874.csv  all_cards_1674521611.csv  all_cards_1674588749.csv  all_cards_1674688398.csv  all_cards_1674766030.csv  all_cards_1674937454.csv  all_cards_1674939378.csv  all_cards_1674942850.csv  all_cards_1674956837.csv  all_cards_1674996074.csv  all_cards_1675054873.csv  all_cards_1675127884.csv  all_cards_1675205331.csv  all_cards_1675369089.csv  all_cards_2023-02-03T18:26.csv  all_cards_2023-02-04T01:35.csv  all_cards_2023-02-04T22:04.csv  all_cards_2023-02-06T05:01.csv  all_cards_2023-02-08T19:58.csv  all_cards_2023-02-09T00:40.csv  all_cards_2023-02-09T22:34.csv  (+1330 more)
doc/: conf.py
docs/: api.rst  bot.rst  conf.py  index.rst  modules.rst  utils.rst  yugiquery.rst
docs/source/: modules.rst  yugiquery.rst
notebooks/: .gitattributes  Bandai.ipynb  Cards.ipynb  Debug.ipynb  Rush.ipynb  Sets.ipynb  Speed.ipynb  Timeline.ipynb
notebooks/templates/: Collection.ipynb  Template.ipynb
reports/: Bandai.html  Bandai.ipynb  Cards.html  Debug.ipynb  Rush.html  Rush.ipynb  Sets.ipynb  Speed.html  Speed.ipynb  Timeline.ipynb  yugiquery
reports/templates/: Collection.ipynb  Template.ipynb
source/: Bandai.ipynb  Cards.ipynb  Debug.ipynb  Rush.ipynb  Sets.ipynb  Speed.ipynb  Timeline.ipynb  bot.py  bot_old.py  bot_v2.py  discord_bot.py  install.sh  requirements.txt  unlock_git.sh  yugiquery.py
yugiquery/: .gitattributes  Bandai.ipynb  Rush.ipynb  Sets.ipynb  Speed.ipynb  Timeline.ipynb  __init__.py  __main__.py  __version__.py  bot.py  metadata.py  requirements.txt  version.py  yugiquery.py
yugiquery/assets/: .gitattributes  secrets.env
yugiquery/assets/bash/: install.sh  kernel.sh  nbconvert.sh  strip_secrets.sh
yugiquery/assets/markdown/: footer.md
yugiquery/assets/notebook/: Collection.ipynb  Template.ipynb
yugiquery/assets/scripts/: post_install.py
yugiquery/bot/: __init__.py  __main__.py  base.py  discord.py  telegram.py
yugiquery/reports/: Bandai.ipynb  Debug.ipynb
yugiquery/utils/: __init__.py  api.py  dirs.py  git.py  helpers.py  plot.py  progress_handler.py
