[build-system]
requires = ["hatchling >=1.5"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "yugiquery/metadata.py"

[tool.hatch.envs.default.scripts]
post-install = "nbconvert.sh"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = ["MANIFEST.in"]

[project]
name = "YugiQuery"
description = "Python package to query and display Yu-Gi-Oh! data built on Jupyter notebooks and Git."
authors = [
    {name = "Guilherme Ruiz", email = "57478888+guigoruiz1@users.noreply.github.com"}
]
readme = "README.md"
license = {text = "MIT"}
keywords = ["CLI", "yugiquery", "bot", "Discord", "Telegram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta"
]
urls = {Homepage = "https://guigoruiz1.github.io/yugiquery/", Source = "https://github.com/guigoruiz1/yugiquery/", Documentation = "https://yugiquery.readthedocs.io/"}
dynamic = [
   "version"
]
requires-python = ">=3.11"
dependencies = [
    "arrow>=1.3.0",
    "discord.py>=2.3.2",
    "GitPython>=3.1.42",
    "ipykernel>=6.29.3",
    "ipylab>=1.0.0",
    "ipython>=8.12.3",
    "itables>=1.7.1",
    "jupyter_client>=8.6.1",
    "matplotlib>=3.8.3",
    "matplotlib_venn>=0.11.10",
    "nbconvert>=7.11.0",
    "nbformat>=5.10.3",
    "nbstripout>=0.6.1",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "papermill>=2.5.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot>=21.0.1",
    "Requests>=2.31.0",
    "seaborn>=0.13.2",
    "wikitextparser>=0.55.8",
    "tqdm @ git+https://github.com/guigoruiz1/tqdm.git",
    "halo @ git+https://github.com/guigoruiz1/halo.git"
]

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme"]
test = ["pytest", "coverage"]

[project.scripts]
yugiquery = "yugiquery.__main__:main"

[tool.coverage.run]
branch = true
source = ["yugiquery"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
files = ["yugiquery"]
strict = true

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39']

[tool.isort]
profile = "black"