[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "yugiquery"
description = "Python package to query and display Yu-Gi-Oh! data built on Jupyter notebooks and Git."
authors = [
    { name = "Guilherme Ruiz", email = "57478888+guigoruiz1@users.noreply.github.com" },
]
readme = "README.md"
license = { text = "MIT" }
keywords = ["CLI", "yugiquery", "bot", "Discord", "Telegram"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
]
dynamic = ["version"]
requires-python = ">=3.9"
dependencies = [
    "aiohttp>=3.7.4",
    "arrow>=1.3.0",
    "GitPython>=3.1.42",
    "ipykernel>=6.29.3",
    "ipylab>=1.0.0",
    "ipython>=8.12.3",
    "itables>=1.7.1",
    "jupyter_client>=8.6.1",
    "matplotlib>=3.8.3",
    "matplotlib_inline>=0.1.2",
    "matplotlib_venn>=0.11.10",
    "nbconvert>=7.11.0",
    "nbformat>=5.10.3",
    "numpy>=1.26.4",
    "pandas>=2.2.1",
    "papermill>=2.5.0",
    "platformdirs>=2.4.0",
    "python-dotenv>=1.0.1",
    "Requests>=2.31.0",
    "seaborn>=0.13.2",
    "tqdm[notebook]>=4.62.3",
    "termcolor>=2.4.0",
    "wikitextparser>=0.55.8",
    "halo @ git+https://github.com/guigoruiz1/halo.git",
]

[project.urls]
Homepage = "https://guigoruiz1.github.io/yugiquery"
Source = "https://github.com/guigoruiz1/yugiquery"
Documentation = "https://yugiquery.readthedocs.io"

[project.optional-dependencies]
docs = ["sphinx", "sphinx_rtd_theme"]
test = ["pytest", "coverage"]
discord = ["discord.py"]
telegram = ["python-telegram-bot"]
bot = ["yugiquery[discord, telegram]"]
all = ["yugiquery[docs, bot, test]"]

[project.scripts]
yugiquery = "yugiquery.__main__:main"

[tool.hatch.version]
source = "vcs"
fallback-version = '2.0.1'

[tool.hatch.build.hooks.vcs]
version-file = "yugiquery/_version.py"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = ["reports", "data", ".github"]

[tool.hatch.build.targets.wheel.shared-data]
"assets" = "share/yugiquery"
"assets/nbconvert" = "share/jupyter/nbconvert/templates"
"notebooks" = "share/yugiquery/notebooks"

[tool.hatch.envs.docs]
features = ["docs"]

[tool.hatch.envs.docs.scripts]
build = "make -C docs html"

[tool.coverage.run]
branch = true
source = ["yugiquery"]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
enable_error_code = ["ignore-without-code", "truthy-bool"]
follow_imports = "normal"
ignore_missing_imports = true
pretty = true
show_column_numbers = true
warn_no_return = false
warn_unused_ignores = true

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125
